--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,12 @@ dependencies:
     sdk: flutter
   bloc: ^8.0.0
   flutter_bloc: ^8.0.0
+  formz: ^0.4.0
+  equatable: ^2.0.0
+  authentication_repository:
+    path: lib/login/packages/authentication_repository
+  user_repository:
+    path: lib/login/packages/user_repository
 
   cupertino_icons: ^1.0.2
 
@@ -21,7 +27,6 @@ dev_dependencies:
     sdk: flutter
   bloc_test: ^9.0.0
   mocktail: ^0.2.0
-  equatable: ^2.0.3
   flutter_lints: ^1.0.0
   integration_test:
     sdk: flutter
